fixed nav overflow

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -281,7 +281,6 @@ footer {
 @import "./skills";
 
 //desktop styles import
-
-@media only screen and (min-width: 900px) {
+@media only screen and (min-width: 1350px) {
   @import "./desktop";
 }
